<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="2">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/customDialogButton"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/example"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="end|bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_yes"
            android:textStyle="normal"
            style="@style/customDialogButton"/>

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_no"
            android:textStyle="normal"
            style="@style/customDialogButton"/>


    </LinearLayout>

</LinearLayout>