<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font_goodharu"
            android:textColor="@color/regularText"
            android:text="@string/example"
            android:textSize="28sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_item"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/font_goodharu"
            android:textSize="12pt"
            android:paddingHorizontal="8dp"
            android:hint="@string/hint_insert"
            />

        <ImageButton
            android:id="@+id/ib_add"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:src="@drawable/addcart"
            android:background="@color/addCart"
            android:contentDescription="@string/descript_addCart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/miniLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16.5"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>