<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/getTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font_goodharu"
            android:textColor="@color/regularText"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/getTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/search_bar"
        app:layout_constraintLeft_toLeftOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="@id/toolbar"
        app:layout_constraintHeight_percent="0.1">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/box_border"
            android:fontFamily="@font/font_goodharu"
            android:textSize="12pt"
            android:paddingHorizontal="8dp"
            android:hint="@string/hint_list"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/getTitle"
        app:layout_constraintBottom_toTopOf="@id/miniLayout"
        app:layout_constraintLeft_toLeftOf="@id/getTitle"
        app:layout_constraintRight_toRightOf="@id/getTitle"
        app:layout_constraintHeight_percent="0.1">

        <EditText
            android:id="@+id/et_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_margin="6dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/font_goodharu"
            android:textSize="12pt"
            android:paddingHorizontal="8dp"
            android:hint="@string/hint_insert"/>

        <ImageButton
            android:id="@+id/ib_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:src="@drawable/addcart"
            android:background="@drawable/button_effect"
            android:scaleType="center"
            android:contentDescription="@string/descript_addCart" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/miniLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12.5"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintLeft_toLeftOf="@id/search_bar"
        app:layout_constraintRight_toRightOf="@id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="15dp"
        android:fontFamily="@font/font_goodharu"
        android:background="@color/saveBtn"
        android:textColor="#000000"
        android:text="@string/hint_save"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/miniLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/miniLayout"
        app:layout_constraintRight_toRightOf="@id/miniLayout"
        app:layout_constraintHeight_percent="0.1"/>
</androidx.constraintlayout.widget.ConstraintLayout>