<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="20"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/font_goodharu"
            android:textColor="@color/regularText"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:src="@drawable/search"
            android:contentDescription="@string/descript_search" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/font_goodharu"
            android:textSize="12pt"
            android:hint="@string/hint_search" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/miniLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16.5"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="center"
            app:srcCompat="@drawable/add"
            app:fabCustomSize="75dp"
            app:maxImageSize="42dp"/>

    </FrameLayout>
</LinearLayout>